<resources>
    <string name="app_name">Cinetopia</string>
    <string name="menu_search">Search</string>
    <string name="menu_extra">Extra\'s</string>
    <string name="moviedetails_menu_share">Share</string>
    <string name="moviedetails_menu_options">Options</string>
    <string name="mainactivity_search">Search</string>
    <string name="mainactivity_menu">Menu</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="watchlist">Watchlist</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="settings">Settings</string>
    <string name="watched">Watched</string>
    <string name="add_to_watched">Add to Watched</string>
    <string name="settings_activity_language">Language</string>
    <string name="search">Search</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="search_movies">Search movies…</string>
    <string name="english">English</string>
    <string name="dutch">Dutch</string>
    <string name="german">German</string>
    <string name="language">en-US</string>
    <string name="open_in_browser" translatable="false">Open in browser</string>
    <string name="filter_by_rating">Filter by rating</string>
    <string name="alertdialog_rating_cancel">Cancel</string>
    <string name="alertdialog_rating_radio_button_1">rating between 0.0 and 4.0</string>
    <string name="alertdialog_rating_radio_button_2">rating between 4.0 and 6.0</string>
    <string name="alertdialog_rating_radio_button_3">rating between 6.0 and 8.0</string>
    <string name="alertdialog_rating_radio_button_4">rating between 8.0 and 10.0</string>
    <string name="filter_by_genre">Filter by genre</string>
    <string name="add_movie_result">Movie successfully added</string>
    <string name="remove_movie_result">Movie successfully removed</string>
    <string name="backdrop_content_desc">A backdrop image of the movie.</string>
    <string name="poster_content_desc">Movie poster image.</string>
    <string name="submit_button">Sumbit vote</string>
    <string name="remove_from_list_confirmation">Are you sure you want to remove this movie from the list?</string>
    <string name="remove_movie_result_duplicate">This movie is already in this list</string>
    <string name="rating_result_succes">Rating has been submitted</string>
    <string name="rating_result_rerate">The rating of your vote has been changed</string>
    <string name="clear_all_label">Clear all</string>
</resources>
