<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_filter_genre"
                android:icon="@drawable/ic_gerne_filter_icon"
                android:title="@string/filter_by_genre"/>
            <item
                android:id="@+id/action_filter_rating"
                android:icon="@drawable/ic_rating_icon"
                android:title="@string/filter_by_rating"/>
        </menu>
    </item>

</menu>