<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/filter_by_rating"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingBottom="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog_rating_radio_button_1"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog_rating_radio_button_2" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog_rating_radio_button_3"/>

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog_rating_radio_button_4" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rating_alertdialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/alertdialog_rating_cancel"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/rating_alertdialog_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>